# Zscore_Efficiency_Rating

./: .gitignore  pyproject.toml
src/ratingsystems/zer/: __init__.py  rating_system.py
src/ratingsystems/zer/model/: __init__.py  stat.py
src/ratingsystems_zer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
