[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ratingsystems-zer"
version = "0.1.0"
dependencies = [
    "ratingsystems~=0.0",
]
requires-python = ">=3.11"
authors = []
maintainers = []
description = "Library for the Z-Score Efficiency Rating System"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["ratingsystems.zer*"]

[project.entry-points.ratingsystems]
rating_system = "ratingsystems.zer:ZscoreEfficiencyRatingSystem"
